--- a/templates/home.html
+++ b/templates/home.html
@@ -9,67 +9,46 @@
 
     <style>
         a {
-            color: black;
-            text-decoration: none;
+        color: black;
+        text-decoration: none;
         }
     </style>
-
     </head>
     <body>
-    <!---NAVEGACION-->
+
+    <!-- NAVBAR -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
     <div class="container-fluid">
-    <img src="{{url_for('static', filename='images/segunda.png')}}" width="100" height="100" alt="ícono desde url_for">
-    <div class="d-flex justify-content-center ">
-        <ul class="navbar-nav ms-auto">
-            <li class="nav-item"><a class="nav-link active"href="productos">productos</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">inicio secion</a></li>
-            <li class="nav-item"><a class="nav-link" href="#" >registro gratis</a></li>
-        </ul>
-    </div>
-    <button class="navbar-expand-sm" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-    </button>
-    </div>
-    </nav>
-    <nav class="navbar bg-body-tertiary fixed-top">
-    <div class="container-fluid">
-    <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
-        <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Siembraveci</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        <!-- Logo -->
+        <img src="{{ url_for('static', filename='images/segunda.png') }}" width="100" height="100" alt="Logo" />
 
-            <div class="offcanvas-body">
-            <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-            <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Dropdown
-                </a>
-                <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li>
-                    <hr class="dropdown-divider">
-                </li>
-                <li><a class="dropdown-item" href="#">Something else here</a></li>
-                </ul>
-            </li>
-            </ul>
-            <form class="d-flex mt-3" role="search">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"/>
-            <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
+        <!-- Botón hamburguesa -->
+        <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
+        aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <!-- Offcanvas Menu -->
+        <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+        <div class="offcanvas-header">
+            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Menú</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Cerrar"></button>
         </div>
+        <div class="offcanvas-body ">
+            <ul class="navbar-nav justify-content-end flex-grow-1 pe-3 gap-3">
+            <button><li class="nav-item"><a class="nav-link active" href="{{ url_for('blog') }}">blog</a></li></button>    
+            <button><li class="nav-item"><a class="nav-link" href="{{ url_for('page') }}">Productos</a></li></button>
+            <button><li class="nav-item"><a class="nav-link" href="{{ url_for('login') }}">Iniciar sesión</a></li></button>
+            <button><li class="nav-item"><a class="nav-link" href="{{ url_for('registro') }}">Registro gratis</a></li></button>
+            </ul>
+        </div>
+        </div>
+    </div>
     </nav>
+
     
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
+
+    <!-- Script de Bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
     </body>
     </html>
-
-
-
